--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>my first ever website</h1>
-    <h3>look mama.i got it. </h3>
-   
+    <h1>my first web site</h1>
+    <h3>look mama i got it</h3>
 </body>
+</html>
