--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>my first web site</h1>
-    <h3>look mama i got it</h3>
+    <p>mama ami bishoyta bujte parci.</p>
+    
 </body>
 </html>
