--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>mama ami bishoyta bujte parci.</p>
+    <h1>my first ever website</h1>
+    <H3>hello mama.how are you..?</H3>
+    <p>mama i miss u..really.</p>
     
 </body>
-</html>
