--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>my first ever website</h1>
-    <H3>hello mama.how are you..?</H3>
-    <p>mama i miss u..really.</p>
-    <p>mama i am happy bz i can push to github.</p>
-    
+ <h1>Bangaladesh</h1>
+ <p>bangladesh valo footballl khelte pare.</p>
 </body>
