--- a/dexktop.html
+++ b/dexktop.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
- <h1>Bangaladesh</h1>
- <p>bangladesh valo footballl khelte pare.
-     Ta amra soby jani
- </p>
+    <img src="my project/my documents/index.html/sadia.jpg" alt="">
 </body>
+</html>
