done git commit -m done $ git commit -m done git commit -mdone

--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
  <p>bangladesh valo footballl khelte pare.
      Ta amra soby jani
  </p>
+ <p>ami jani kono akdin kono ak notun vore tmi fire ashba</p>
 </body>
