--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        input:focus{
+        color: blue;border-radius: 2px; border: 3px solid green;font-size: large;    
+        }
+        
+
+
+    </style>
 </head>
 <body>
  <h1>Bangaladesh</h1>
  <p>bangladesh valo footballl khelte pare.
      Ta amra soby jani
  </p>
+        <input type="text">
+        <input type="gmail">
 </body>
+</html>
